<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ciMain">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:id="@+id/ciProfileMain"
            android:src="@drawable/foto_dummy_pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/dummy_date"
            android:id="@+id/tvDateMain"
            app:layout_constraintTop_toTopOf="@id/ciProfileMain"
            app:layout_constraintBottom_toBottomOf="@+id/ciProfileMain"
            app:layout_constraintStart_toStartOf="@+id/ciProfileMain"/>

        <ImageView
            android:id="@+id/ibProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@color/white"
            android:contentDescription="@string/txt_imageview"
            android:src="@drawable/person"
            app:layout_constraintBottom_toBottomOf="@+id/tvDateMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDateMain"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_goneMarginTop="@dimen/_16dp"
            android:elevation="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@+id/ciProfileMain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cvHighlight">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200dp"
                    app:cardCornerRadius="@dimen/_20dp"
                    android:id="@+id/cvImage">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:src="@drawable/main_banner"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/txt_imageview"
                        android:id="@+id/ivHighlight"/>
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cvImage"
                    android:text="@string/title"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:id="@+id/tvTitleHighlight"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"/>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_below="@id/tvTitleHighlight"
                    android:src="@drawable/foto_dummy_pro"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:id="@+id/ciProfileAuthorHighlight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitleHighlight"
                    android:text="@string/txt_author"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_toEndOf="@id/ciProfileAuthorHighlight"
                    android:id="@+id/tvAuthorNameHighlight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitleHighlight"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/dummy_date"
                    android:id="@+id/tvDateHighlight"/>

            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/cvHighlight"
            android:id="@+id/hsTopic">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_all"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvAll"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/international"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvInternational"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_media"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvMedia"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_magazine"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvMagazine"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_business"
                    android:textSize="@dimen/_18sp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:id="@+id/tvBusiness"/>
            </LinearLayout>

        </HorizontalScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@+id/hsTopic"
            tools:listitem="@layout/news_item"
            android:id="@+id/rvMain"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>